gcc/testsuite/rust/rustc/ui/parser/removed-syntax-ptr-lifetime.rs
type bptr = &lifetime/isize; // { dg-error "" "" { target *-*-* } }

